# brs-xss

./: .gitignore  =3.8.0  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.ci  ETHICS.md  KEY_VERIFICATION.md  LEGAL.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  main.py  out.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
benchmarks/: README.md  __init__.py  known_targets.md  models.py  performance-test.py  runner.py  targets.py
blind_xss_server/: Dockerfile  __init__.py  docker-compose.yml  models.py  notifications.py  server.py  storage.py
brsxss/: __init__.py  version.py
cli/: __init__.py  main.py
config/: default.yaml  default.yaml.bak
docs/: api-reference.md  architecture.md  ci-integration.md  classification-engine.md  configuration.md  docker.md  github-sarif.md  quickstart.md  safe-mode.md  waf-bypass-testing.md  web-ui.md
examples/: 01_basic_scan.py  02_post_form_scan.py  03_waf_bypass.py  04_ml_enhanced_scan.py  05_full_website_scan.py  README.md
requirements/: base.txt  dev.txt
results/: .gitkeep  README.md  simple_scan_1760083202.txt
scripts/: bump_version.py  mock_vuln_server.py  run_web_ui.py
tests/: __init__.py  test_calculators_unit.py  test_confidence_calculator_unit.py  test_config_and_risk_analyzer.py  test_core_modules.py  test_http_client_unit.py  test_i18n.py  test_knowledge_base.py  test_logger_basic.py  test_paths.py  test_payload_generator_comprehensive.py  test_payload_generator_critical.py  test_payload_generator_gaps.py  test_report_templates_unit.py  test_reporting_basics.py  (+3 more)
(+456 files in other folders)
